# CSS2_UQ

./: .gitignore  LSTM-token-logprobs.ipynb  README.md  pyproject.toml  results.txt
UQ/: README.md
UQ/halt/: README.md  demo_halt.py  requirements.txt
UQ/halt/artifacts/evaluation/: halt_eval_20260414_165916.md  halt_eval_20260415_105024.md
UQ/halt/evaluation/: evaluate_halt.py
UQ/halt/preprocessing/: preprocess_halt.py
UQ/halt/training/: train_halt.py
UQ/joshua/: 1DCNN_neg_weights  1DCNN_neg_weights.py  1DCNN_pos_weights.py  1DCNN_unweighted.py  main.py  main2.py  main3.py  results.txt  summary.txt
data_work/: README.md  pyproject.toml
data_work/docs/: modeling_lstm.md  runbook.md
data_work/examples/: load_lstm_example.py
data_work/mmlu_pro_trace_eval/: __init__.py  config.py  dataset.py  modal_app.py  prompting.py  schema.py
data_work/mmlu_trace_eval/: batching.py  dataset.py  prompting.py
data_work/tests/: test_pro_config.py  test_pro_prompting.py  test_pro_schema.py  test_storage.py
docs/: dataset.md
docs/superpowers/plans/: 2026-04-15-mmlu-pro-dataset.md
mmlu_trace_eval/: __init__.py  config.py  modal_app.py  schema.py  storage.py
modeling/: README.md
modeling/evaluation/: evaluate_halt.py
modeling/halt/: README.md
modeling/halt/evaluation/: evaluate_halt.py
modeling/halt/training/: train_halt.py
modeling/models/: halt.py
modeling/tests/: preprocess_halt_tests.py
modeling/training/: train_halt.py
tests/: test_batching.py  test_config.py  test_prompting.py  test_schema.py
