[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "css2-uq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "datasets",
    "scikit-learn",
    "pandas",
    "numpy",
    "huggingface-hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modeling*"]